fix hero overlay making text too dark

--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -19,13 +19,15 @@
   }
 
   &__container {
+    position: relative;
+    width: 100%;
+  }
+
+  &__band-name {
     width: 100%;
     max-width: 1020px;
     margin: auto;
     padding: 0 1rem;
-  }
-
-  &__band-name {
     color: $white;
   }
 }
